# MetodyOptymalizacji

./: CMakeLists.txt  lab_no.h  main.cpp  matrix.cpp  matrix.h  ode_solver.cpp  ode_solver.h  opt_alg.cpp  opt_alg.h  solution.cpp  solution.h  wykres2.txt
